appId: com.oen.busmaster
---
- runFlow: ../common/Signin.yaml

# open and close modal
- tapOn:
    id: 'create-trip'
- assertVisible: 'From (Boarding Point)'
- assertVisible: 'To (Destination)'
- assertVisible: 'Bus Registration'
- assertVisible: 'Amount per Seat (UGX)'
- assertVisible: 'Trip Date'
- assertVisible: 'Departure Time'
- assertVisible:
    id: 'submit-button'

# check if error message display when an empty form is submitted
- tapOn:
    id: 'submit-button'
- assertVisible: 'All fields are required.'
- back

# create trip
- tapOn:
    id: 'create-trip'

- tapOn:
    id: 'input-from'
- inputText: 'Kampala'
- hideKeyboard

- tapOn:
    id: 'input-to'
- inputText: 'Lira'
- hideKeyboard

- tapOn:
    id: 'input-bus-reg'
- inputText: 'UAX123X'
- hideKeyboard

- tapOn:
    id: 'amount-per-seat'
- inputText: '30000'
- hideKeyboard

- tapOn:
    id: 'submit-button'

- assertVisible: 'Trip created successfully'

- back
- clearState
